css/style.css
* {
  -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important; 
  -webkit-focus-ring-color: rgba(255, 255, 255, 0) !important; 
  outline: none !important;
}
a, a:visited{
  color: #999;
}
body{
  font-family: 'Courier New';
  font-weight: 400;
  background: #000; 
  color: #fff;
  font-size: 1em;
}
.stdout-text{
  color: #0f0;
}

table td{
  padding-right:10px;
  text-align: right; 
} 
input{
  padding-left: 4px;
  font-size: 1em;
  height: 1em;
  font-family: 'Courier New';
  color: white;
  background: black;
  border-color: black !important;
  border: none !important;
}

